--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sue-bot-platform",
+  "name": "sue-bot-nestjs",
   "version": "0.0.1",
   "description": "",
   "author": "Daniel Grynyk",
@@ -29,6 +29,7 @@
     "nestjs-pino": "^4.3.1",
     "nestjs-telegraf": "^2.8.1",
     "pg": "^8.13.3",
+    "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "prisma": "^6.4.1",
@@ -54,7 +55,10 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typegram": "^5.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.8.2"
+  },
+  "engines": {
+  "node": "22.0.0"
   },
   "packageManager": "yarn@4.6.0+sha256.eaf1eeabc164a44ca0b65dbdccd54af7e55f3ff9294b3ff318d5aaec92f2b20b"
 }
