--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
@@ -53,7 +54,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typegram": "^5.2.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0"
   },
   "engines": {
     "node": "22.0.0"
