--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "yarn prettier --write --single-quote .",
-    "postinstall": "yarn run build"
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.0",
