--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "paths": {
       "@models/*": ["src/models/*"],
       "@shared/*": ["src/shared/*"],
-      "@utils": ["src/utils"]
+      "@utils/*": ["src/utils/*"],
     },
   }
 }
