--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
     "nestjs-pino": "^4.3.1",
     "nestjs-telegraf": "^2.8.1",
     "pg": "^8.13.3",
@@ -40,7 +42,7 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.0",
+    "@nestjs/testing": "^11.0.11",
     "@types/lodash": "^4",
     "@types/node": "^20.3.1",
     "@types/pg": "^8",
