--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@nestjs/core": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
+    "axios": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jest": "^29.7.0",
