--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
