configure bot-user dto, subscribe.scene implementation, confirm callback listener, shared back, close buttons

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,6 +9,7 @@
       "@models/*": ["models/*"],
       "@shared/*": ["shared/*"],
       "@utils/*": ["utils/*"],
+      "@modules/*": ["modules/*"],
     }
   },
   "exclude": ["node_modules", "dist", "test", "**/*.spec.ts"]
