--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@models/*": ["src/models/*"],
       "@shared/*": ["src/shared/*"],
       "@utils/*": ["src/utils/*"],
+      "@modules/*": ["src/modules/*"],
     },
   }
 }
