--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sue-bot-nestjs",
-  "version": "0.0.3",
+  "name": "sue-bot-platform",
+  "version": "0.0.31",
   "description": "",
   "author": "Daniel Grynyk",
   "private": true,
