update dependencies, update scripts

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start:bot": "yarn exec nx serve bot",
+    "build:bot": "yarn nx build bot",
+    "build:all": "yarn nx run-many --target=build --projects=bot --parallel",
+    "start:bot": "yarn nx serve bot",
     "start:bot-prod": "node dist/apps/bot/main.js",
-    "start:prod": "yarn build:all && concurrently \"yarn start:bot-prod\"",
-    "build:bot": "yarn exec nx build bot",
-    "build:all": "yarn exec nx run-many --target=build --projects=bot --parallel",
+    "start:prod": "yarn build:all && yarn start:bot-prod",
     "heroku-postbuild": "yarn build:all"
   },
   "devDependencies": {
@@ -21,7 +21,7 @@
     "@nx/nest": "^20.6.1",
     "@nx/node": "20.6.1",
     "@nx/web": "20.6.1",
-    "@nx/webpack": "20.6.1",
+    "@nx/webpack": "^20.6.1",
     "@nx/workspace": "20.6.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -29,6 +29,7 @@
     "@types/node": "^22.13.10",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "nx": "^20.6.1",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
@@ -50,7 +51,6 @@
     "dotenv": "^16.4.7",
     "nestjs-pino": "^4.3.1",
     "nestjs-telegraf": "^2.8.1",
-    "nx": "^20.6.1",
     "pg": "^8.14.1",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
