--- a/package.json
+++ b/package.json
@@ -4,30 +4,19 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "heroku-prebuild": "yarn add nx",
-    "heroku-postbuild": "yarn nx run-many --target=build --projects=bot --parallel",
-    "start:bot": "yarn nx serve bot",
+   "heroku-postbuild": "yarn nx run-many --target=build --projects=bot --parallel",
     "start:prod": "node dist/apps/bot/main.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.6.1",
-    "@nx/eslint-plugin": "20.6.1",
-    "@nx/js": "20.6.1",
-    "@nx/nest": "^20.6.1",
-    "@nx/node": "20.6.1",
-    "@nx/web": "20.6.1",
-    "@nx/webpack": "^20.6.1",
-    "@nx/workspace": "20.6.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "^22.13.10",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
-    "nx": "^20.6.1",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
@@ -42,6 +31,14 @@
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@nx/eslint": "20.6.1",
+    "@nx/eslint-plugin": "20.6.1",
+    "@nx/js": "20.6.1",
+    "@nx/nest": "^20.6.1",
+    "@nx/node": "20.6.1",
+    "@nx/web": "20.6.1",
+    "@nx/webpack": "^20.6.1",
+    "@nx/workspace": "^20.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^9.1.2",
@@ -49,6 +46,7 @@
     "dotenv": "^16.4.7",
     "nestjs-pino": "^4.3.1",
     "nestjs-telegraf": "^2.8.1",
+    "nx": "^20.6.1",
     "pg": "^8.14.1",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
