update tsconfigs, import empty api lib

--- a/apps/bot/tsconfig.json
+++ b/apps/bot/tsconfig.json
@@ -15,6 +15,8 @@
       "@shared/*": ["src/app/shared/*"],
       "@utils/*": ["src/app/utils/*"],
       "@modules/*": ["src/app/modules/*"],
+      "@core/*": ["src/app/core/*"],
+      "@sue-bot-platform/api": ["../../libs/api/src/index.ts"],
     },
   }
 }
