admin-panel project init

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@sue-bot-platform/api": ["libs/api/src/index.ts"],
-      "@sue-bot-platform/core": ["libs/core/src/index.ts"],
       "@sue-bot-platform/bot/*": ["apps/bot/src/*"],
+      "@sue-bot-platform/core": ["libs/core/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
