--- a/package.json
+++ b/package.json
@@ -6,41 +6,67 @@
   "scripts": {
     "start:bot": "nx serve bot",
     "build:bot": "nx build bot",
-    "build:all": "yarn nx run-many --target=build --projects=bot --parallel",
+    "build:admin-panel": "nx build admin-panel",
+    "build:all": "yarn build:bot && yarn build:admin-panel",
     "start:prod": "node dist/apps/bot/main.js",
     "heroku-postbuild": "yarn build:all"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~19.2.0",
+    "@angular-devkit/core": "~19.2.0",
+    "@angular-devkit/schematics": "~19.2.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "~19.2.0",
+    "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nx/jest": "20.6.1",
+    "@schematics/angular": "~19.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
+    "@typescript-eslint/utils": "^8.19.0",
+    "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "~14.4.0",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@angular/common": "~19.2.0",
+    "@angular/compiler": "~19.2.0",
+    "@angular/core": "~19.2.0",
+    "@angular/forms": "~19.2.0",
+    "@angular/platform-browser": "~19.2.0",
+    "@angular/platform-browser-dynamic": "~19.2.0",
+    "@angular/router": "~19.2.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "@nx/angular": "^20.6.2",
     "@nx/eslint": "20.6.1",
     "@nx/eslint-plugin": "20.6.1",
-    "@nx/js": "20.6.1",
+    "@nx/js": "20.6.2",
     "@nx/nest": "^20.6.1",
     "@nx/node": "20.6.1",
-    "@nx/web": "20.6.1",
+    "@nx/web": "20.6.2",
     "@nx/webpack": "^20.6.1",
     "@nx/workspace": "^20.6.1",
     "class-transformer": "^0.5.1",
@@ -58,7 +84,8 @@
     "rxjs": "^7.8.0",
     "telegraf": "^4.16.3",
     "typegram": "^5.2.0",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "zone.js": "~0.15.0"
   },
   "engines": {
     "node": "22.x",
