--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@angular/common": "~19.2.0",
+    "@angular/common": "^19.2.3",
     "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/router": "~19.2.0",
+    "@angular/core": "^19.2.3",
+    "@angular/forms": "^19.2.3",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^19.2.4",
+    "@angular/platform-browser": "^19.2.3",
+    "@angular/platform-browser-dynamic": "^19.2.3",
+    "@angular/router": "^19.2.3",
+    "@angular/service-worker": "^19.2.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.2",
@@ -81,11 +84,11 @@
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
+    "rxjs": "^7.8.2",
     "telegraf": "^4.16.3",
     "typegram": "^5.2.0",
     "typeorm": "^0.3.21",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "engines": {
     "node": "22.x",
