admin-panel login screen

--- a/nx.json
+++ b/nx.json
@@ -59,6 +59,9 @@
       "linter": "eslint",
       "style": "scss",
       "unitTestRunner": "jest"
+    },
+    "@nx/angular:component": {
+      "standalone": false
     }
   }
 }
