--- a/apps/admin-panel/project.json
+++ b/apps/admin-panel/project.json
@@ -2,7 +2,7 @@
   "name": "admin-panel",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "prefix": "sue",
   "sourceRoot": "apps/admin-panel/src",
   "tags": [],
   "targets": {
