partially auth module and dashboard module implemented, formErrorPipe, snackbar service

--- a/apps/admin-panel/project.json
+++ b/apps/admin-panel/project.json
@@ -25,6 +25,9 @@
           }
         ],
         "styles": ["apps/admin-panel/src/styles.scss"],
+        "stylePreprocessorOptions": {
+          "includePaths": ["apps/admin-panel/src/styles/"]
+        },
         "scripts": []
       },
       "configurations": {
