--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@angular/animations": "^19.2.3",
     "@angular/cdk": "^19.2.4",
     "@angular/common": "^19.2.3",
     "@angular/compiler": "~19.2.0",
@@ -74,6 +75,7 @@
     "@nx/web": "20.6.2",
     "@nx/webpack": "^20.6.1",
     "@nx/workspace": "^20.6.1",
+    "@swimlane/ngx-charts": "^22.0.0-alpha.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^9.1.2",
