--- a/apps/admin-panel/tsconfig.json
+++ b/apps/admin-panel/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2022",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
+    "strictNullChecks": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
