--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "heroku-postbuild": "yarn build:all"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-devkit/core": "~19.2.0",
-    "@angular-devkit/schematics": "~19.2.0",
+    "@angular-devkit/build-angular": "^19.2.5",
+    "@angular-devkit/core": "^19.2.5",
+    "@angular-devkit/schematics": "^19.2.5",
     "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
+    "@angular/compiler-cli": "^19.2.4",
     "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
@@ -32,7 +32,7 @@
     "@types/node": "^22.13.10",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -77,6 +77,8 @@
     "@nx/webpack": "^20.6.1",
     "@nx/workspace": "^20.6.1",
     "@swimlane/ngx-charts": "^22.0.0-alpha.1",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^9.1.2",
@@ -90,11 +92,13 @@
     "pg": "^8.14.1",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
+    "quill": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
     "telegraf": "^4.16.3",
     "typegram": "^5.2.0",
     "typeorm": "^0.3.21",
+    "webpack": "^5.98.0",
     "zone.js": "^0.15.0"
   },
   "engines": {
