metrics controller in api lib

--- a/apps/admin-panel/project.json
+++ b/apps/admin-panel/project.json
@@ -5,6 +5,7 @@
   "prefix": "sue",
   "sourceRoot": "apps/admin-panel/src",
   "tags": [],
+  "implicitDependencies": ["api"],
   "targets": {
     "build": {
       "executor": "@angular-builders/custom-webpack:browser",
