--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "dotenv-webpack": "^8.1.0",
+    "lodash-es": "^4.17.21",
     "nestjs-pino": "^4.3.1",
     "nestjs-telegraf": "^2.8.1",
     "ngx-quill": "^27.0.1",
