--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
@@ -77,6 +76,7 @@
     "@nx/webpack": "^20.6.1",
     "@nx/workspace": "^20.6.1",
     "@swimlane/ngx-charts": "^22.0.0-alpha.1",
+    "@types/lodash": "^4.17.16",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "class-transformer": "^0.5.1",
@@ -85,7 +85,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "dotenv-webpack": "^8.1.0",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "nestjs-pino": "^4.3.1",
     "nestjs-telegraf": "^2.8.1",
     "ngx-quill": "^27.0.1",
