--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/serve-static": "^5.0.3",
@@ -77,9 +79,13 @@
     "@nx/webpack": "^20.6.1",
     "@nx/workspace": "^20.6.1",
     "@swimlane/ngx-charts": "^22.0.0-alpha.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.16",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^9.1.2",
@@ -91,6 +97,9 @@
     "nestjs-telegraf": "^2.8.1",
     "ngx-quill": "^27.0.1",
     "nx": "^20.6.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
